Issue #1170346 by Matthijs: added support for indicating which image styles are already cropped.

--- a/manualcrop.css
+++ b/manualcrop.css
@@ -62,3 +62,6 @@ img.manualcrop-image {
   color: #000000;
   background-color: #FFFFFF;
 }
+.manualcrop-style-option-cropped, .manualcrop-style-select-cropped {
+  background-color: #B9E246;
+}
